<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <parent>
        <artifactId>maven-confluence-parent</artifactId>
        <groupId>org.bsc.maven</groupId>
        <version>5.1.1</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>maven-confluence-core</artifactId>
    <name>CONFLUENCE-REPORTING::Core - ${project.version}</name>

    <scm>
        <connection>scm:git:https://github.com/bsorrentino/maven-confluence-reporting-plugin.git</connection>
        <developerConnection>scm:git:https://github.com/bsorrentino/maven-confluence-reporting-plugin.git</developerConnection>
        <url>https://github.com/bsorrentino/maven-confluence-reporting-plugin.git</url>
        <tag>HEAD</tag>
    </scm>

    <description>maven confluence plugin - core project</description>
    <url>http://code.google.com/p/maven-confluence-plugin/</url>
    <developers>
        <developer>
            <id>bsorrentino</id>
            <name>Bartolomeo Sorrentino</name>
            <email>bartolomeo.sorrentino@gmail.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Apache License Version 2</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>


  <dependencies>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>org.apache.xmlrpc</groupId>
          <artifactId>xmlrpc-client</artifactId>
      </dependency>

      <dependency>
          <groupId>commons-httpclient</groupId>
          <artifactId>commons-httpclient</artifactId>
      </dependency>

    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>okhttp</artifactId>
      <version>3.4.0-RC1</version>
    </dependency>

    <dependency>
        <groupId>javax.json</groupId>
        <artifactId>javax.json-api</artifactId>
        <version>1.0</version>
    </dependency>

    <dependency>
        <groupId>org.glassfish</groupId>
        <artifactId>javax.json</artifactId>
        <version>1.0.4</version>
    </dependency>
<!--
      <dependency>
        <groupId>org.javalite</groupId>
        <artifactId>javalite-common</artifactId>
      </dependency>
-->
  <!--
	ISSUE 18

	This 'system deps' inclusion cause: java.lang.NoClassDefFoundError: org/codehaus/swizzle/confluence/Page during execution

  	<dependency>
  		<groupId>miniTemplator</groupId>
  		<artifactId>miniTemplator</artifactId>
  		<version>1.0</version>

  		<optional>true</optional>
  		<scope>system</scope>
  		<systemPath>${project.basedir}/lib/miniTemplator-1.0.jar</systemPath>

          </dependency>
        -->

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>org.bsc.util</groupId>
            <artifactId>minitemplator-repackaged</artifactId>
        </dependency>

        <dependency>
            <groupId>com.beust</groupId>
            <artifactId>jcommander</artifactId>
            <version>1.32</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.pegdown</groupId>
            <artifactId>pegdown</artifactId>
        </dependency>

        <dependency>
            <groupId>io.reactivex</groupId>
            <artifactId>rxjava</artifactId>
        </dependency>

    </dependencies>


    <build>

        <plugins>
           <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
 
            <!-- Separates the unit tests from the integration tests. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                    <skip>true</skip>
                </configuration>
            </plugin>
            
            <!--
            ===================================
            JAXB SCHEMA GENERATION

            jaxb2:schemagen
            ===================================
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <sources>
                        <source>src/main/java/org/bsc/confluence/model/Site.java</source>
                        <source>src/main/java/org/bsc/confluence/model/package-info.java</source>
                    </sources>
                    <outputDirectory>${project.build.directory}/schemas</outputDirectory>
                    
                    <!-- Post-processing 2: Transform the generated XML Schemas.-->
                    <transformSchemas>
                        <transformSchema>
                            <uri>https://github.com/bsorrentino/maven-confluence-plugin</uri>
                            <toPrefix>bsc</toPrefix>
                            <toFile>site-schema-${project.version}.xsd</toFile>
                        </transformSchema>  
                    </transformSchemas>    
          
                </configuration>
            </plugin>
      <plugin>
        <groupId>net.orfjackal.retrolambda</groupId>
        <artifactId>retrolambda-maven-plugin</artifactId>
        <version>2.5.1</version>
        <executions>
          <execution>
            <goals>
              <goal>process-main</goal>
              <goal>process-test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

        </plugins>

    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.reactivex</groupId>
                <artifactId>rxjava</artifactId>
                <version>1.1.8</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>utest</id>
            <activation><activeByDefault>true</activeByDefault></activation>
            <build>
            <plugins>    
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                		<skip>false</skip>
	                <excludes>
	                    <exclude>**/*IntegrationTest.java</exclude>
	                </excludes>
                </configuration>
            </plugin>
            </plugins>    
            </build>
        </profile>
    			
        <profile>
            <id>itest</id>
            <build>
            <plugins>    
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                		<skip>false</skip>
	                <includes>
	                    <include>**/*IntegrationTest.java</include>
	                </includes>
                </configuration>
            </plugin>
            </plugins>    
            </build>
        </profile>
        
    </profiles>
</project>
